<resources>
    <string name="app_name">TrackMe</string>
    <string name="action_settings">Settings</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_with_phone_number">Register with your phone number</string>
    <string name="please_save_these_credentials">Please Save These Credentials</string>
    <string name="register_completer">Registration Complete</string>
    <string name="register">Register</string>
    <string name="okay">Okay</string>
    <string name="registration_warning">"We are register you with your phone number. You cannot register using this sim card again. Please remember your password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="watch_me_text_activity_main">Watch Me</string>
    <string name="watch_text_activity_main">Watch</string>
    <string name="set_watchers_text_activity_main">Set Watchers</string>
    <string name="request_text_activity_main">Requests</string>
    <string name="profile_text_activity_main">Profile</string>
    <string name="log_out_text_activity_main">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_watchers_maps">Map</string>
    <string name="title_activity_watch_me">Map</string>
    <string name="title_activity_dialog_box">DialogBox</string>
    <string name="app_short_name">PNGCM Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="server_registered">Successfully registered on server</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="gcm_unregister_message">Token unsubscribed from GCM and notification server. You will no longer
    get any notification.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="unregistering_message">Un-registering Notification Service...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server. Please refresh.</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fragment_watchers">My Watchers</string>
    <string name="fragment_my_requests">My Request</string>
    <string name="fragment_requests">Requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
