<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smalam.pseudozero.trackme.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/logged_in_message_text_viewMa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/watch_me_button_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/watch_me_text_activity_main"
        />

    <Button
        android:id="@+id/watch_button_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/watch_text_activity_main"
        />

    <Button
        android:id="@+id/set_watchers_button_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_watchers_text_activity_main"
        />


    <Button
        android:id="@+id/profile_button_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_text_activity_main"
        />

    <Button
        android:id="@+id/log_out_button_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out_text_activity_main"
        />

</LinearLayout>
