<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smalam.pseudozero.trackme.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/username_text_view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        />

    <EditText
        android:id="@+id/username_edit_text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/username_text_view_register"
        />

    <TextView
        android:id="@+id/password_text_view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:layout_below="@+id/username_edit_text_register"
        />

    <EditText
        android:id="@+id/password_edit_text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/password_text_view_register"
        />


    <TextView
        android:id="@+id/phone_number_text_view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_text"
        android:layout_below="@+id/password_edit_text_register"
        />

    <EditText
        android:id="@+id/phone_number_edit_text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/phone_number_text_view_register"
        />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_edit_text_register"
        android:text="@string/register"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        />

</RelativeLayout>
